increasing max edit top menu width to prevent overflow

--- a/src/app/core/substance-form/substance-form.component.scss
+++ b/src/app/core/substance-form/substance-form.component.scss
@@ -105,7 +105,7 @@ mat-select-panel{
 }
 
 .actions-container {
-    max-width: 1028px;
+    max-width: 1128px;
     width: 100%;
     background-color: white;
     padding: 10px;
